# NNHandler

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
doc/: getting_started.md  multiple_nodes_multiple_gpu_slurm_job.sh  multiple_nodes_single_gpu_slurm_job.sh  single_node_slurm_job.sh
doc/nn_handler/: README.md  autosaver.md  distributed.md  sampler.md
doc/nn_handler/callbacks/: base.md  saving.md  training.md  utils.md  visualisation.md
doc/nn_handler/utils/: ddp_utils.md
new_doc/: getting_started.md  multiple_nodes_multiple_gpu_slurm_job.sh  single_node_multiple_gpu_slurm_job.sh
new_doc/nn_handler/: README.md  distributed.md  logger.md  nn_handler.md  sampler.md
new_doc/nn_handler/callbacks/: README.md  monitor.md  saving.md  training.md  utils.md  visualisation.md
new_doc/nn_handler/checkpointing/: README.md  loading.md  saving.md  trainer_saving.md
new_doc/nn_handler/dataloaders/: README.md  h5_dataloader.md  rank_cached_h5_dataloader.md
notebooks/: MNIST_model.py  mnist_basic_example.ipynb  mnist_patch_diffusion.ipynb  mnist_score.ipynb  mnist_score.py  multi_gpu_sampling.ipynb  parallelize_on_gpus_decorator.ipynb  save_model_code_example.ipynb  save_model_code_example_2.ipynb
notebooks/test/: save_model_code_example_3.ipynb
src/NNHandler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nn_handler/: __init__.py  __version__.py  autosaver.py  cli.py  logger.py  nn_handler.py  nn_handler_distributed.py  sampler.py
tests/: ddp.sh  ddp_single_node.py
(+55 files in other folders)
